--- a/frontend/src/pages/supervisor/ViewStudentProject/ViewStudentProject.css
+++ b/frontend/src/pages/supervisor/ViewStudentProject/ViewStudentProject.css
@@ -179,7 +179,10 @@
   background: white;
   padding: 2rem;
   border-radius: 10px;
-  max-width: 600px;
+  /* max-width: 600px; */
+    white-space: pre-wrap;
+  word-break: break-word;
+  height: 500px;
   width: 90%;
   box-shadow: 0 4px 10px rgba(0,0,0,0.15);
   position: relative;
