Add assets and update auth page styles

--- a/frontend/src/pages/student/ViewProject/ViewProject.css
+++ b/frontend/src/pages/student/ViewProject/ViewProject.css
@@ -30,8 +30,28 @@
   white-space: nowrap !important;
 }
 
+.project-list{
+  display: flex;
+  gap: 10px;
+}
+
+.project-card >h3{
+  font-size: 17px;
+}
 
 
 .project-card{
   overflow: hidden;
+}
+
+.select-btn{
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+@media (max-width: 768px) {
+  .project-list {
+    display: flex;
+    flex-direction: column;
+  }
 }
