--- a/frontend/src/pages/student/File/File.css
+++ b/frontend/src/pages/student/File/File.css
@@ -142,7 +142,9 @@
   }
 
   .file-preview-container {
-    height: 200px;
+    /* height: 200px; */
+    height: 50px;
+    padding-left: 5px;
   }
 
   .file-zoom-content {
