--- a/frontend/src/pages/admin/AssignSupervisor/Assign.css
+++ b/frontend/src/pages/admin/AssignSupervisor/Assign.css
@@ -28,6 +28,15 @@
   min-width: 200px;
 }
 
+.filter-controls input:focus{
+  outline: none;
+  color: black;
+}
+
+.filter-controls > input{
+  background-color: transparent;
+  border: 1px solid lightgray;
+}
 .table-wrapper {
   overflow-x: auto;
 }
