--- a/frontend/src/pages/supervisor/SupervisorCalendar/SupervisorCalendar.css
+++ b/frontend/src/pages/supervisor/SupervisorCalendar/SupervisorCalendar.css
@@ -36,7 +36,7 @@
 }
 
 .event-form button {
-  background-color: #007bff;
+  background-color: #2e7d32 ;
   color: white;
   padding: 0.6rem 1.2rem;
   border: none;
