--- a/frontend/src/pages/admin/CreateSupervisor/CreateSupervisor.css
+++ b/frontend/src/pages/admin/CreateSupervisor/CreateSupervisor.css
@@ -42,3 +42,14 @@
   text-align: center;
   font-size: 14px;
 }
+
+.admin-form > input{
+  background-color: transparent;
+  border: 1px solid lightgray;
+  color: black;
+}
+
+
+.admin-form > input:focus{
+ outline: none;
+}
