--- a/frontend/src/pages/supervisor/SupervisorCalendar/SupervisorCalendar.css
+++ b/frontend/src/pages/supervisor/SupervisorCalendar/SupervisorCalendar.css
@@ -43,3 +43,11 @@
   border-radius: 4px;
   cursor: pointer;
 }
+
+
+.event{
+  background-color: transparent;
+  border: 1px solid lightgray;
+  color: black;
+}
+
