--- a/frontend/src/pages/admin/AssignSupervisor/Assign.css
+++ b/frontend/src/pages/admin/AssignSupervisor/Assign.css
@@ -61,9 +61,11 @@ select {
 }
 
 button {
-  padding: 6px 12px;
+  padding: 3px;
   font-size: 14px;
   cursor: pointer;
+  background-color: #61956e;
+  color: white;
 }
 
 .status {
