--- a/frontend/src/components/MainNavbar/MainNavbar.css
+++ b/frontend/src/components/MainNavbar/MainNavbar.css
@@ -1,5 +1,5 @@
 .main-navbar {
-  background-color: #213c23; /* dark green */
+  background-color: #213c23; 
   color: #ffffff;
   display: flex;
   justify-content: space-between;
